# new-ime

./: .env.example  .gitignore  ATTRIBUTION.md  CHANGELOG.md  CMakeLists.txt  Cargo.toml  DATA_LICENSES.md  LICENSE_NOTICES.md  MODEL_LICENSE  PLAN.md  README.md  ROADMAP.md  pyproject.toml
crates/data-bench-onnx/: Cargo.toml
crates/data-bench-onnx/src/: main.rs
crates/data-mix/: Cargo.toml
crates/data-mix/src/: main.rs
crates/data-pool-filter/: Cargo.toml
crates/data-pool-filter/src/: main.rs  rules.rs
crates/data-pool-sampler/: Cargo.toml
crates/data-pool-sampler/src/: main.rs
crates/data-process-whitepaper/: Cargo.toml
crates/data-process-whitepaper/src/: extract.rs  fetch.rs  ingest.rs  main.rs
crates/data-process-zenz/: Cargo.toml
crates/data-process-zenz/src/: main.rs
crates/data-row/: Cargo.toml
crates/data-row/src/: main.rs
crates/data-synth-goji/: Cargo.toml
crates/data-synth-goji/src/: kana_tables.rs  main.rs  rules.rs
crates/data-synth-homophone/: Cargo.toml
crates/data-synth-homophone/src/: main.rs
crates/new-ime-engine-cli/: Cargo.toml
crates/new-ime-engine-cli/src/: main.rs
crates/new-ime-engine-core/: Cargo.toml  build.rs
crates/new-ime-engine-core/csrc/: kenlm_shim.cpp
crates/new-ime-engine-core/src/: beam.rs  kenlm.rs  lib.rs  session.rs  tokenizer.rs  validate.rs
crates/rust-bench/: Cargo.toml
crates/rust-bench/src/: main.rs  model.rs  native.rs
crates/rust-data/: Cargo.toml
crates/rust-data/src/: batch.rs  compile.rs  iter.rs  main.rs  prefetch.rs  shard.rs
crates/rust-train/: Cargo.toml  build.rs
crates/rust-train/src/: backend.rs  ctc.rs  device.rs  main.rs  optim.rs  pipeline.rs  tensor.rs  trainer.rs
crates/rust-train/src/gpu/: backend.rs  batch.rs  ckpt.rs  kd.rs  layers.rs  loss.rs  model.rs  optim.rs  parity.rs
datasets/tools/bench-onnx/: Cargo.toml
datasets/tools/bench-onnx/src/: main.rs
datasets/tools/mix/: Cargo.toml
datasets/tools/mix/src/: main.rs
datasets/tools/synth-homophone/: Cargo.toml
datasets/tools/synth-homophone/src/: main.rs
engine/win32-rs/tsf/: Cargo.toml
engine/win32-rs/tsf/src/: async_convert.rs  composing_text.rs  engine_bridge.rs  globals.rs  keymap.rs  lib.rs  registration.rs
engine/win32-rs/tsf/src/tsf/: candidate_window.rs  class_factory.rs  composition_sink.rs  display_attribute.rs  edit_session.rs  key_event_sink.rs  text_input_processor.rs
legacy/python/: DEPRECATED.md  pyproject.toml
legacy/python/configs/: benchmark_models.json  phase3_90m.yaml  train_phase3_20m_smoke.env  train_phase3_90m_fast.env
legacy/python/datasets/tools/corpus/: clean_v2.py  fetch_all.sh  process_wikimedia.py  synth_numeric.py
legacy/python/datasets/tools/probe/: generate.py  run.py  sweep_30m_student_120_140k.sh  sweep_30m_student_160k.sh  sweep_v3_bunsetsu_kenlm.sh
legacy/python/models/src/data/: dataset.py  mecab_pipeline.py
legacy/python/models/src/eval/: ar_backend.py  ctc_beam.py  ctc_nat_backend.py  fast_gen.py  jinen_backend.py  run_eval.py  zenz_backend.py
legacy/python/models/src/model/: ctc_nat.py  cvae.py  decoder.py
legacy/python/models/src/training/: kd.py  train_ctc_nat.py  train_teacher.py
legacy/python/models/tests/: test_audit_pools.py  test_bit_linear.py  test_curriculum_sampler.py  test_dataset_reservoir.py  test_kd.py  test_metrics.py  test_model.py  test_shard_dataset.py  test_training_ctc_nat.py
legacy/python/models/tools/bench/: __init__.py  bench_ar_speed.py  bench_ctc_nat_speed.py
legacy/python/models/tools/eval/: eval_ar_checkpoint.py  eval_gold.py  run_all_evals.py  sweep_ctc_kenlm_benches.py
legacy/python/models/tools/manual/: manual_test_beam.py
models/rust/kkc-bench/: Cargo.toml
models/rust/kkc-bench/src/: layers.rs  main.rs  model.rs
models/rust/kkc-data/: Cargo.toml
models/rust/kkc-data/src/: compile.rs  iter.rs  lib.rs  prefetch.rs
models/rust/kkc-train/: Cargo.toml  build.rs
models/rust/kkc-train/src/: backend.rs  device.rs  gpu.rs  main.rs  nn.rs  pipeline.rs  tensor.rs  trainer.rs
models/rust/kkc-train/src/gpu/: backend.rs  batch.rs  ckpt.rs  kd.rs  layers.rs  loss.rs  mod.rs  model.rs  optim.rs  parity.rs
tools/: Cargo.toml
tools/audit-pools/: Cargo.toml
tools/audit-pools/src/: main.rs
tools/audit-tokenizer/: Cargo.toml
tools/bench/: bench_ctc_nat_fusion.py  bench_zenz_speed.py
tools/build-train-mix-v2/: Cargo.toml
tools/build-train-mix-v2/src/: main.rs
tools/build-train-mix/src/: main.rs
tools/build-vocab/: Cargo.toml
tools/build-vocab/src/: main.rs
tools/chunk-generator/: Cargo.toml
tools/corpus_v2/: README.md  bunsetsu_split.py  clean_v2.py  extract_aozora_dialogue.py  fetch_all.sh  process_tatoeba.py  process_wikimedia.py  run_bunsetsu_all.sh  sample_and_classify.py  synth_numeric.py  synth_numeric_ext.py
tools/datacore/: Cargo.toml
tools/datacore/src/: jsonl.rs
tools/eval/: eval_gold.py  print_comparison.py  run_all_evals.py  sweep_ctc_kenlm_benches.py
tools/manual/: __init__.py  manual_test_ctc_nat.py
tools/mecab-test/: Cargo.toml
tools/mecab-test/src/: main.rs
tools/misc/: ablate_diversity_v2.py  aggregate_probe_sweep.py  aggregate_v3_ajimee.py  aggregate_v3_sweep.py  bench_all.py  check_kenlm_contam.py  deploy_vastai.sh  percat_bench_all.py  pull_v3_checkpoints.sh  train_domain_kenlm.sh  watchdog_vast.sh
tools/old/: audit_pools.py  audit_tokenizer.py  build-train-mix-v2.py  build_eval_set.py  build_phase3_train.py  generate_chunks.py  process_fineweb2.py  process_hplt.py  process_wiki.py  process_zenz_subset.py
tools/ops/: deploy_vastai.sh  finalize_v2_reorg.sh  vast_train.sh
tools/postprocess/src/: main.rs
tools/probe/: generate_v2.py  generate_v3.py  run_cvae_probe.py  run_probe_v2.py  run_probe_v3.py  sweep_chunk_probev3.py  sweep_probe_v2_kenlm.sh
tools/probe/legacy/: run_probe_v2.py  sweep_30m_probev3_kenlm.sh  sweep_30mv2_final_step16k.sh  sweep_30mv2_kenlm.sh  sweep_30mv2_probev3_kenlm.sh  sweep_30mv2_step160k_kenlm.sh  sweep_v2_step160k.sh
tools/process-zenz/: Cargo.toml
tools/process-zenz/src/: main.rs
tools/rust/: smoke_compare.py
(+512 files in other folders)
