[workspace]
resolver = "2"
members = [
    "datasets/tools/datacore",
    "datasets/tools/mix",
    "datasets/tools/offset-index",
    "datasets/tools/process-zenz",
    "datasets/tools/audit",
]
# Standalone crates build out of tree.
exclude = [
    "models/tools/build-vocab",
    "models/tools/postprocess",
    "models/tools/audit-tokenizer",
    "datasets/tools/chunk-generator",
    "tools/old",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ahash = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
zstd = "0.13"
flate2 = "1"
xz2 = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
