[workspace]
resolver = "2"
members = [
    "datasets/tools/datacore",
    "datasets/tools/mix",
    "datasets/tools/offset-index",
    "datasets/tools/process-zenz",
    "datasets/tools/audit",
    "datasets/tools/bench-onnx",
    "datasets/tools/extract-domain",
    "datasets/tools/extract-short",
    "datasets/tools/process-whitepaper",
    "datasets/tools/synth-homophone",
    "datasets/tools/synth-numeric-units",
    "datasets/tools/synth-name",
    "models/rust/kkc-tokenizer",
    "models/rust/kkc-data",
    "models/rust/kkc-model",
    "models/rust/kkc-train",
    "engine/tools/interactive-rs",
    "engine/win32-rs/engine-core",
    "engine/win32-rs/tsf",
]
# Standalone crates build out of tree.
exclude = [
    "models/tools/build-vocab",
    "models/tools/postprocess",
    "models/tools/audit-tokenizer",
    "datasets/tools/chunk-generator",
    "tools/old",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ahash = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
zstd = "0.13"
flate2 = "1"
xz2 = "0.1"
libloading = "0.8"
toml = "0.8"
thiserror = "1"
memmap2 = "0.9"
rayon = "1"
rand = "0.8"
# Optional CUDA backend. Consumers opt in via the `cuda` feature of kkc-train.
# Matches the Python venv's torch 2.6 cu124 build so LIBTORCH can point at
# .venv/Lib/site-packages/torch without a second libtorch download.
tch = { version = "0.18", default-features = false }
safetensors = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
