[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ahash = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
zstd = "0.13"
flate2 = "1"
xz2 = "0.1"
libloading = "0.8"
toml = "0.8"
thiserror = "1"
memmap2 = "0.9"
rayon = "1"
rand = "0.8"
# Optional CUDA backend. Consumers opt in via the `cuda` feature of
# `rust-train`.
tch = { version = "0.18", default-features = false }
safetensors = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
