[project]
name = "new-ime"
version = "0.2.0"
description = "Japanese kana-kanji IME research prototype (v2 restructure)"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.11",
    "pydantic>=2.10",
    "tokenizers>=0.20",
    "transformers>=4.46",
    "numpy>=2.0",
    "tqdm>=4.66",
    "jaconv>=0.3",
    "huggingface-hub>=0.26",
    # Windows の torch.compile / Inductor は PyPI の triton ではなく
    # triton-windows が必要。Linux CUDA wheel は通常の triton を引く。
    "triton-windows<3.7 ; sys_platform == 'win32'",
    # KenLM Python binding は system libstdc++ を要求するソース
    # ビルドで、kenlm 0.3.0 sdist + Windows MSVC は setuptools 側の
    # 既知問題で詰まる。Linux (= WSL / GPU host) でだけ入れる。
    "kenlm>=0.3 ; sys_platform == 'linux'",
    # Python 3.10 以下のフォールバック。3.11+ は tomllib が同梱。
    "tomli>=2.0 ; python_version<'3.11'",
]

[project.optional-dependencies]
# DAT CUDA kernel JIT build (torch.utils.cpp_extension.load).
# ninja が無いと distutils ベースで fallback ビルドできるが、Windows MSVC
# 環境では ninja がほぼ必須。Linux でも ninja があると並列リンクで速い。
cuda = ["ninja>=1.11"]

[project.scripts]
ime-train = "new_ime.cli.train:main"
ime-bench = "new_ime.cli.bench:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/new_ime"]

# DAT CUDA kernel ソース (.cu/.cpp/.h) を wheel に同梱。hatchling は
# packages の Python module 以外の binary asset を自動収集しないため、
# force-include で明示的に指定する。
[tool.hatch.build.targets.wheel.force-include]
"src/new_ime/training/loss/dat_cuda/_kernels" = "new_ime/training/loss/dat_cuda/_kernels"

[tool.hatch.metadata]
allow-direct-references = true

# ------------------------------------------------------------
# uv: torch wheel source.
#
# Python torch は training 用なので CUDA wheel だけを使う。
# CPU 実行系は Rust/ONNX 側が担うため、CPU torch fallback は置かない。
# `tool.uv.sources` の index source はその package を指定 index に
# pin するため、単一 CPU source にすると GPU host でも +cpu になる。
# ------------------------------------------------------------
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=references"
