[package]
name = "data-process-zenz"
edition.workspace = true
version.workspace = true

[[bin]]
name = "data-process-zenz"
path = "src/main.rs"

[dependencies]
data-core = { path = "../data-core" }
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile = "3"
