[package]
name = "data-row"
edition.workspace = true
version.workspace = true

[[bin]]
name = "data-row"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
ratatui = "0.28"
crossterm = "0.28"
memmap2.workspace = true
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
dotenvy = "0.15"
