[package]
name = "data-synth-goji"
edition.workspace = true
version.workspace = true

[[bin]]
name = "data-synth-goji"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
rand_distr = "0.4"
data-core = { path = "../data-core" }

[dev-dependencies]
tempfile = "3"
