[package]
name = "data-synth-homophone"
edition.workspace = true
version.workspace = true

[[bin]]
name = "data-synth-homophone"
path = "src/main.rs"

[dependencies]
data-core = { path = "../data-core" }
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
ahash.workspace = true
