[package]
name = "new-ime-engine-core"
edition.workspace = true
version.workspace = true
build = "build.rs"

[lib]
name = "new_ime_engine_core"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }
ndarray = "0.17"
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
cc = "1"
