[package]
name = "rust-bench"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
safetensors.workspace = true
rust-tokenizer = { path = "../rust-tokenizer" }
tch = { workspace = true, optional = true }

[features]
default = []
native-tch = ["dep:tch"]

[dev-dependencies]
tempfile = "3"
