[package]
name = "rust-data"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
memmap2.workspace = true
rayon.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
data-core = { path = "../data-core" }
rust-tokenizer = { path = "../rust-tokenizer" }

[dev-dependencies]
tempfile = "3"
