[package]
name = "rust-train"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
safetensors.workspace = true
rust-data = { path = "../rust-data" }
rust-model = { path = "../rust-model" }
rust-tokenizer = { path = "../rust-tokenizer" }
# Optional: enabled by `--features cuda`. Pinned to tch 0.18 which tracks
# libtorch 2.6; set `LIBTORCH` to an existing libtorch install root when
# enabling this feature.
tch = { workspace = true, optional = true }

[features]
default = []
cuda = ["dep:tch"]

[dev-dependencies]
tempfile = "3"
