[package]
name = "process-zenz"
edition.workspace = true
version.workspace = true

[[bin]]
name = "process-zenz"
path = "src/main.rs"

[dependencies]
datacore = { path = "../datacore" }
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile = "3"
