[package]
name = "bench-onnx"
edition.workspace = true
version.workspace = true

[[bin]]
name = "bench-onnx"
path = "src/main.rs"

[dependencies]
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }
ndarray = "0.17"
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
