[package]
name = "build-train-mix"
edition.workspace = true
version.workspace = true

[[bin]]
name = "build-train-mix"
path = "src/main.rs"

[dependencies]
datacore = { path = "../datacore" }
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
rand = "0.8"
ahash.workspace = true
