[package]
name = "new-ime-tsf"
edition.workspace = true
version.workspace = true
description = "Windows TSF (Text Services Framework) IME DLL for new-ime"

[lib]
name = "new_ime_tsf"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
new-ime-engine-core = { path = "../engine-core" }
anyhow.workspace = true
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_TextServices",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.58"
