[package]
name = "kkc-bench"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
safetensors.workspace = true
kkc-tokenizer = { path = "../kkc-tokenizer" }
tch.workspace = true

[dev-dependencies]
tempfile = "3"
