[package]
name = "kkc-data"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
memmap2.workspace = true
rayon.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
datacore = { path = "../../../datasets/tools/datacore" }
kkc-tokenizer = { path = "../kkc-tokenizer" }

[dev-dependencies]
tempfile = "3"
